--- a/src/i18n/en_EN.json
+++ b/src/i18n/en_EN.json
@@ -6,5 +6,8 @@
     "restaurant": "Restaurant",
     "church": "Church",
     "city-hall": "City Hall"
+  },
+  "languages": {
+    "select-language": "Select Language"
   }
 }
