--- a/src/i18n/fr_FR.json
+++ b/src/i18n/fr_FR.json
@@ -6,5 +6,8 @@
     "restaurant": "Restaurant",
     "church": "Église",
     "city-hall": "Mairie"
+  },
+  "languages": {
+    "select-language": "Choisissez la langue"
   }
 }
