--- a/src/i18n/it_IT.json
+++ b/src/i18n/it_IT.json
@@ -6,5 +6,8 @@
     "restaurant": "Ristorante",
     "church": "Chiesa",
     "city-hall": "Municipio"
+  },
+  "languages": {
+    "select-language": "Seleziona la lingua"
   }
 }
