--- a/src/i18n/it_IT.json
+++ b/src/i18n/it_IT.json
@@ -1,4 +1,5 @@
 {
+  "app-title": "Simone e Martina",
   "invitation": "Carissimi,\n\n Il grande giorno si avvicina!\n Simone Rizza e Martina Di Marco sono felici di condividere con voi questo momento speciale.\n Il 7 febbraio 2025 ci riuniremo per celebrare una splendida unione, vivere insieme la gioia di questo giorno unico e creare ricordi da custodire per sempre.\n La vostra presenza è per noi un dono prezioso, e non vediamo l'ora di festeggiare insieme a voi.\n\n Con affetto e gratitudine,\n\n Simone e Martina",
   "locations": {
     "address": "Indirizzo",
