--- a/src/i18n/fr_FR.json
+++ b/src/i18n/fr_FR.json
@@ -1,4 +1,5 @@
 {
+  "app-title": "Simone et Martina",
   "invitation": "Chers Tous,\n\n Le grand jour approche !\n Simone Rizza et Martina Di Marco sont ravis de partager avec vous ce moment si spécial.\n Le 7 février 2025, nous nous réunirons pour célébrer une belle union, partager la joie de cette journée unique et créer des souvenirs inoubliables.\n Votre présence est un véritable cadeau pour nous, et nous avons hâte de célébrer avec vous.\n\n Avec toute notre affection,\n\n Simone et Martina",
   "locations": {
     "address": "Adresse",
