feat(program): church

--- a/src/i18n/en_EN.json
+++ b/src/i18n/en_EN.json
@@ -6,7 +6,8 @@
     "time": "Time",
     "restaurant": "Restaurant",
     "church": "Church",
-    "city-hall": "City Hall"
+    "city-hall": "City Hall",
+    "program": "Program"
   },
   "languages": {
     "select-language": "Select Language"
