--- a/src/i18n/es_ES.json
+++ b/src/i18n/es_ES.json
@@ -6,7 +6,8 @@
     "time": "Hora",
     "restaurant": "Restaurante",
     "church": "Iglesia",
-    "city-hall": "Ayuntamiento"
+    "city-hall": "Ayuntamiento",
+    "program": "Programa"
   },
   "languages": {
     "select-language": "Selecciona el Idioma"
