--- a/src/i18n/en_EN.json
+++ b/src/i18n/en_EN.json
@@ -7,7 +7,8 @@
     "restaurant": "Restaurant",
     "church": "Church",
     "city-hall": "City Hall",
-    "program": "Program"
+    "program": "Program",
+    "link": "Link"
   },
   "languages": {
     "select-language": "Select Language"
