--- a/src/i18n/it_IT.json
+++ b/src/i18n/it_IT.json
@@ -7,7 +7,8 @@
     "restaurant": "Ristorante",
     "church": "Chiesa",
     "city-hall": "Municipio",
-    "program": "Programma"
+    "program": "Programma",
+    "link": "Link"
   },
   "languages": {
     "select-language": "Seleziona la lingua"
